# rust_studies

adventure_of_code/: go.mod
adventure_of_code/day-1/: trebuchet_day-1.go
adventure_of_code/day-2/: cube_conundrum_day-2.go
adventure_of_code/day-3/: gear_ratios-day-3.go
basic-web-server/src/: lib.rs  main.rs
cro8s/: Cargo.toml  docker-compose.yml
cro8s/migrations/2023-11-18-142347_create_crates/: up.sql
cro8s/src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs
cro8s/src/routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
cro8s/tests/: crates.rs  rustaceans.rs
cro8s/tests/common/: mod.rs
mini-grep/src/: lib.rs  main.rs
my-redis-tokio/: Cargo.toml
my-redis-tokio/examples/: hello-redis.rs
my-redis-tokio/src/: main.rs
