[package]
name = "cro8s"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
rocket = { version = "0.5.0-rc", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1" , features = ["postgres", "chrono"]}
diesel-async = { version = "0.4", features = ["postgres"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features=["serde"]}
clap = "4.4"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }